CSS/portfolio.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    scroll-behavior: smooth;
}
html{
    scroll-behavior: smooth;
}
body {
    font-family: "Quicksand", Arial, sans-serif;
    font-weight: 400;
    font-size: 15px;
    line-height: 1.8;
    color: rgba(0, 0, 0, 0.7);
    overflow-x: hidden;
    padding-bottom: 80px;
    
}
.display{
    display: none;
}
@media screen and (max-width: 992px){
  body {
    font-size: 16px;
    text-align: justify;
  }
}
h1, h2, h3, h4, h5, h6 {
    color: #000;
    font-family: "Playfair Display", Georgia, serif;
    font-weight: 400;
    margin: 0 0 30px 0;
}


#colorlib-main {
    width: calc(100% - 300px);
    float: right;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
}

#colorlib-hero {
    min-height: 100vh;
    width: 100%;
    float: left;
    clear: both;
    background-image: url(../IMG/alexandru-acea--WBYxmW4yuw-unsplash.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
@media screen and (max-width: 768px){
    #colorlib-main {
        width: 100%;
    }
    .colorlib-skills, .colorlib-about, .colorlib-contact, .colorlib-experience, .colorlib-testimonials  {
      padding: 0 1em;
    }
  
  }
  @media screen and (min-height: 750px){
    #colorlib-hero {
     min-height:600px;
    }
  }


.slider-text {
    display: table;
    opacity: 0;
    z-index: 9;
}
 .slider-text-inner {
    display: table-cell;
    vertical-align: middle;
    padding: 2.5em;
    position: relative;
}
@media screen and (max-width: 768px){ .slider-text-inner {
    text-align: center;
}
}

 .slider-text-inner h1 {
    margin-bottom: 20px;
    font-size: 60px;
    line-height: 1.3;
    font-weight: 700;
}
 .slider-text-inner h2 {
    margin: 0;
    padding: 0;
    color: black;
    font-family: "Playfair Display", Georgia, serif;
}
h1, h2, h3, h4, h5, h6 {
    color: #000;
    font-family: "Playfair Display", Georgia, serif;
    font-weight: 400;
    margin: 0 0 30px 0;
}
@media screen and (max-width: 768px){
 .slider-text-inner h1 {
    font-size: 28px;
}
}

 .slider-text-inner h2 {
    font-size: 18px;
    line-height: 1.5;
    margin-bottom: 30px;
    font-weight: 300;
    font-family: "Quicksand", Arial, sans-serif;
}
 .slider-text-inner h1, .slider-text-inner h2 {
    margin: 0;
    padding: 0;
    color: black;
    font-family: "Playfair Display", Georgia, serif;
}
h1, h2, h3, h4, h5, h6 {
    color: #000;
    font-family: "Playfair Display", Georgia, serif;
    font-weight: 400;
    margin: 0 0 30px 0;
}
 .slider-text-inner p {
    margin-bottom: 0;
}

p {
    margin-bottom: 1.5em;
}
 
.slider-text-inner .btn.btn-learn {
    color: #fff;
    border: 1px solid #ffffff7d;
    background: transparent !important;
}
 .slider-text-inner .btn {
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #000;
    padding: 10px 15px !important;
    border: none;
    font-weight: 400;
}
.btn-primary {
    background: #2c98f0;
    color: #fff;
    border: 2px solid #2c98f0;
}
.btn {
    margin-right: 4px;
    margin-bottom: 4px;
    font-family: "Quicksand", Arial, sans-serif;
    font-size: 12px;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 1px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    border-radius: 2px;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    padding: 8px 15px !important;
}
 .slider-text-inner h1 {
    margin-bottom: 20px;
    font-size: 4.1em;
    line-height: 1.3;
    font-weight: 700;
}

 .slider-text-inner h1,  .slider-text-inner h2 {
    margin: 0;
    padding: 0;
    color: #ffffff;
    font-family: "Playfair Display", Georgia, serif;
}
h1, h2, h3, h4, h5, h6 {
    color: #000;
    font-family: "Playfair Display", Georgia, serif;
    font-weight: 400;
    margin: 0 0 30px 0;
}
h1, .h1 {
    font-size: 36px;
}
h1, .h1, h2, .h2, h3, .h3 {
    margin-top: 20px;
    margin-bottom: 10px;
}



@media screen and (max-width: 768px){
.slider-text-inner .btn {
    width: 100%;
}
}

/*=========================================================================*/
.colorlib-testimonials {
    height: 400px;
}

.modal-info {
    margin-top: 10px;
}

.colorlib-experience, .colorlib-skills, .colorlib-work, .colorlib-about, .colorlib-testimonials, .colorlib-contact {
    padding-top: 2em;
    clear: both;
    width: 100%;
    display: block;
}
@media screen and (max-width: 768px){
.colorlib-experience, .colorlib-skills, .colorlib-education, .colorlib-testimonials, .colorlib-work, .colorlib-about, .colorlib-services, .colorlib-contact {
    padding-bottom: 0;
    padding-top: 2em;
}

}
/*===================================ABOUT=================================*/
.row-bottom-padded-sm {
    padding-bottom: 1em;
}
.heading-meta {
    margin-bottom: 15px;
    display: block;
    font-size: 10px;
    text-transform: uppercase;
    color: #999999;
    font-weight: 500;
    letter-spacing: 5px;
}
.services.color-2 {
    border-bottom: 2px solid #ec5453;
}
.services {
    margin-bottom: 80px;
    position: relative;
    z-index: 0;
}
.services {
    margin-bottom: 30px;
    padding: 1.5em;
    -webkit-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
    -moz-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
    -ms-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
    -o-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
    box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
    border-bottom: 2px solid #2c98f0;
}
.services.color-3 {
    border-bottom: 2px solid #f9bf3f;
}
.fa-database{
    color: #f9bf3f;
    font-size: 2em;
}
.fa-mobile-alt{
    color: #a84cb8;
    font-size: 2em;
}
.fa-globe{
    color: #ec5453;
    font-size: 2em;
}
.services .icon2 {
    display: block;
    margin-bottom: 20px;
}
.services h3 {
    font-family: "Quicksand", Arial, sans-serif;
    font-size: 16px;
    font-weight: 500;
}
/* ... */

